--- a/src/icp_todo_api_backend/Cargo.toml
+++ b/src/icp_todo_api_backend/Cargo.toml
@@ -11,4 +11,6 @@ crate-type = ["cdylib"]
 [dependencies]
 candid = "0.8"
 ic-cdk = "0.7"
-ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
+ic-cdk-macros = "0.8"
+serde_json = "1.0.74"
+serde = "1.0.133"
